<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP -->
    <string name="app_name">Tutorial Library</string>

    <!-- Non-UI text -->
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="fav_tut" translatable="false">Fav</string>
    <string name="unfav_tut" translatable="false">UnFav</string>
    <item name="glide_tag" type="id" /> <!-- Remove glide dependency from setTag of ImageView -->

    <!-- fragment: home -->
    <string name="op1_view_tuts">View Tutorials</string>
    <string name="op2_categories">Categories</string>
    <string name="op3_my_tuts">My Tutorials</string>
    <string name="op4_rand_tut">Random Tutorial</string>
    <string name="op5_about">About</string>
    <string name="op6_search">Search</string>
    <string name="op7_settings">Settings</string>
    <string name="op8_feedback">Feedback</string>


    <!-- fragment: tutorials  -->
    <string name="posted">Posted:</string>
    <string name="view_tut">View Tutorial</string>

    <!-- fragment: categories  -->

    <!-- fragment: saved tutorials  -->
    <string name="undo_text">1 item has been removed.</string>

    <!-- fragment: random tutorial  -->
    <string name="by">By:</string>
    <string name="ref">References:</string>
    <string name="online">See Online</string>

    <!-- fragment: about  -->
    <string name="aims_html"><![CDATA[Our aim is simple and is broken into three key goals:<ul>
				<li>
				Everything, one place</li>
				<li>Easy to understand</li>
				<li>Community involvment</li>
			</ul>]]></string>

    <string name="website_html"><![CDATA[Visit us at our website: <a href = \'https://tutoriallibrary.000webhostapp.com/\'>tutoriallibrary</a>]]></string>

    <string name="authors_html" translatable="false"><![CDATA[
        <table>
        <tr><th>Naziur Rahman</th><td>(BSc Computer Science)</td></tr>
        <tr><th>Hamidur Rahman</th><td>(BSc Computer Science)</td></tr>
        </table>
]]></string>
    <string name="aims_abt">Aims</string>
    <string name="web_abt">Web</string>
    <string name="auth_abt">Authors</string>

    <!-- fragment: settings  -->
    <string name="language_settings">Current Language:</string>
    <string name="language_warning_settings">Warning: changing the language will restart the application.</string>
    <string name="theme_settings">Change Theme:</string>

    <!-- fragment: search  -->
    <string name="no_tutorials_found">No Tutorials Found</string>
    <string name="tags_text">Tags:</string>
    <string name="search_hint">Search here...</string>
    <string name="no_result">No Results...</string>
    <string name="array_title">Title</string>
    <string name="array_tag">Tag</string>
    <string name="array_auth">Author</string>

    <!-- fragment: feedback -->
    <string name="feedback_msg">If you are enjoying Tutorial Library, please take a moment to rate it.</string>
    <string name="feedback_rate">Rate</string>
    <string name="feedback_no">No</string>
    <string name="feedback_later">Later</string>

    <!-- App Titles -->
    <string name="title_saved_tut">My Tutorials</string>
    <string name="title_home">Tutorial Library</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_settings">Settings</string>
    <string name="title_categories">Categories</string>
    <string name="title_about">About</string>
    <string name="title_all_tuts">Tutorials</string>
    <string name="title_search">Search</string>

    <!-- Error handler Message -->
    <string name="server_error">Error</string>


</resources>