<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start|bottom"
    android:scrollbarThumbVertical="@android:color/transparent">

    <io.codetail.widget.RevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tutorial"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_tutorial" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op1_view_tuts"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/category"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_category" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op2_categories"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/my_tutorials"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_my_tutorials" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op3_my_tuts"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/random"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_random_tut" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/op4_rand_tut"
                        android:textAlignment="center"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_about" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op5_about"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/search"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op6_search"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/settings"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op7_settings"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feedack"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_feedback" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/op8_feedback"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </io.codetail.widget.RevealFrameLayout>
</ScrollView>