<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="6sp"
    card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/array_title"
                android:id="@+id/title_tv"
                android:textAlignment="center"
                android:textSize="24sp"
                android:background="@color/tutorial_title_bg"
                style="?textSubheader"
                />

            <ImageView
                android:id="@+id/intro_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/default_img"
                android:scaleType="centerCrop" />

            <WebView
                android:id="@+id/intro_wv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/tag_container"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags_text"
                    style="?textRegular"
                    />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:id="@+id/created_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Posted: 08/07/2018"
                    style="?textRegular"
                    android:layout_marginRight="4dp"
                    android:layout_alignBottom="@+id/view_tut_btn"
                    android:layout_alignParentStart="true"
                    android:padding="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?button"
                    android:text="@string/view_tut"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:paddingRight="3dp"
                    android:paddingLeft="3dp"
                    android:id="@+id/view_tut_btn" />

            </RelativeLayout>

        </LinearLayout>
</android.support.v7.widget.CardView>